--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,10 +5,12 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>HUSH.</title>
 	</head>
 	<body>
-		<slot />
+		<main class="dark text-foreground bg-background">
+			<slot />
+		</main>
 	</body>
 </html>
 
